# openapi.yaml
@@ -128,6 +128,37 @@ paths:
       responses:
         "200":
           description: "Successful response"
+  /tournament/upcoming:
+    get:
+      tags:
+        - tournament
+      summary: "Return a list of upcoming tournament"
+      description: "Return a list of upcoming tournament"
+      operationId: "getFutureTournament"
+      parameters:
+        - name: "pageNumber"
+          in: "query"
+          required: false
+          schema:
+            type: "integer"
+            format: "int32"
+          description: "Page number for pagination"
+        - name: "pageSize"
+          in: "query"
+          required: false
+          schema:
+            type: "integer"
+            format: "int32"
+          description: "Number of items per page"
+      responses:
+        "200":
+          description: "Successful response"
+          content:
+            '*/*':
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/Tournament"
   /participant:
     get:
       tags :
@@ -279,7 +310,6 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/Participant"
-
   /match:
     get:
       tags:
